k3s-traefik-ingress/deploy/app/hello-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: paulbouwer/hello-kubernetes:1.5
          ports:
            - containerPort: 8080
