k3s-traefik-ingress/deploy/app/hello-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-internal
  labels:
    app: hello-internal
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 9090
  selector:
    app: hello
