k3s-traefik-ingress/deploy/app/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
    - host: hello.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-internal
              servicePort: 9090
